# Peranti

./: .eslintignore  .eslintrc.cjs  CHANGELOG.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-extensions-runner.cjs  create-metadata.cjs  create-symlink.cjs  createSymlink.cjs
src/: App.tsx  AppMain.tsx  AppRoot.tsx  main.tsx  shims.d.ts  styles.scss  wdyr.ts
src-tauri/: Cargo.toml  extensions-runner  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: AppMain.tsx  AppRoot.tsx
src/bootstrap/: bootstrap.ts
src/constants/: assets.tsx  context-menu-keys.ts  file-names.ts  files.ts  folders.ts  global-style-variables.ts  icons.ts  logo.ts  rust-invoke.ts  secondary-sidebar-sections.ts  storage-keys.ts
src/enums/: SidebarMode.ts  ThemeEnum.ts  ToolLayoutEnum.ts  ToolRunTypeEnum.ts  ToolType.ts  UserSettingsKeys.ts  app-titlebar-style.ts  applet-type.ts  file-drop-action.ts  sidebar-mode.ts  theme-2.ts  user-settings-default.ts  user-settings-keys.ts
src/hooks/: useClickOutside.ts  useDragAndDropJS.ts  useHotkeysModified.ts  usePreviousValue.ts  useSelector.ts  useWindowListener.ts
src/models/: Applet.ts  AppletComponent.ts  AppletConstructor.ts  Component.ts  Pipeline.ts  Tool.ts  ToolComponent.ts
src/providers/: index.ts  with-mobx-store.ts  with-react-hot-toast.tsx  with-themes.ts  with-user-settings.ts  withAppBootstrap.ts  withFileDropListener.ts  withMobxStore.ts  withPluginsSetup.ts  withProductionSetup.ts  withReactHotToast.tsx  withThemes.ts  withUserSettingStore.ts
src/samples/: customer-book-sample.json
src/services/: AppDataService.ts  active-applet-store.ts  app-data-service.ts  applet-component-service.ts  applet-sidebar-service.ts  applet-store.ts  bottom-panel-service.ts  clipboard-service.ts  commandbar-service.ts  component-manager.ts  extensions-service.ts  (+24 more)
(+710 files in other folders)
