[package]
name = "peranti"
version = "0.0.0"
description = "Peranti"
authors = ["nacasha"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "window-set-focus", "dialog-all", "shell-sidecar", "path-all", "fs-all", "http-all", "window-hide", "window-maximize", "window-start-dragging", "window-unminimize", "window-show", "window-unmaximize", "window-close", "window-minimize", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
rand = "0.8"
opener = { version = "0.6.1", features = ["reveal"] }
tauri-plugin-clipboard = "0.5.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
