[package]
name = "peranti"
version = "0.0.3"
description = "Peranti"
authors = ["nacasha"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
opener = { version = "0.6.1", features = ["reveal"] }
tauri-plugin-clipboard-manager = { version = "2.0.0-beta.1" }
tauri-plugin-fs = "2.0.0-beta.1"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-shell = "2.0.0-beta.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
